[package]
name = "rbuilder-extraction"
version = "0.1.0"
edition = "2021"
description = "Code extraction layer for rBuilder"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-error = { path = "../rbuilder-error" }
rbuilder-graph = { path = "../rbuilder-graph" }
rbuilder-plugin-api = { path = "../rbuilder-plugin-api" }
rbuilder-plugin-helpers = { path = "../rbuilder-plugin-helpers" }
rbuilder-registry = { path = "../rbuilder-registry" }
ignore = "0.4"
rayon = "1.7"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = { workspace = true }
rbuilder-bundle-full = { workspace = true }
