[package]
name = "rbuilder-gql"
version = "0.1.0"
edition = "2021"
description = "Graph query language for rBuilder"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-analysis = { path = "../rbuilder-analysis" }
rbuilder-error = { path = "../rbuilder-error" }
rbuilder-graph = { path = "../rbuilder-graph" }
petgraph = "0.6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
