[package]
name = "rbuilder-graph"
version = "0.3.0"
edition = "2021"
description = "Graph storage and query layer for rBuilder"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-error = { path = "../rbuilder-error" }
rbuilder-plugin-api = { path = "../rbuilder-plugin-api" }
bincode = "1.3"
blake3 = "1"
memmap2 = "0.9"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = { workspace = true }
