[package]
name = "rbuilder-lang-bash"
version = "0.1.0"
edition = "2021"
description = "rBuilder language plugin: bash"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-plugin-api = { workspace = true }
rbuilder-registry = { workspace = true }
rbuilder-plugin-helpers = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = "0.25"
serde_yaml = "0.9"
regex = "1"
serde_json = "1"
