[package]
name = "rbuilder-lang-c"
version = "0.4.2"
edition = "2021"
description = "rBuilder language plugin: c"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-plugin-api = { workspace = true }
rbuilder-registry = { workspace = true }
rbuilder-plugin-helpers = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c = "0.24"
serde_json = "1"
tracing = "0.1"
