[package]
name = "rbuilder-lang-crystal"
version = "0.1.0"
edition = "2021"
description = "rBuilder language plugin: crystal"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-plugin-api = { workspace = true }
rbuilder-registry = { workspace = true }
rbuilder-lang-runtime = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-crystal = { git = "https://github.com/crystal-lang-tools/tree-sitter-crystal" }
