[package]
name = "rbuilder-lang-csharp"
version = "0.1.0"
edition = "2021"
description = "rBuilder language plugin: csharp"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-plugin-api = { workspace = true }
rbuilder-registry = { workspace = true }
rbuilder-plugin-helpers = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c-sharp = "0.23.5"
serde_json = "1"
