[package]
name = "rbuilder-lang-dockerfile"
version = "0.1.0"
edition = "2021"
description = "rBuilder language plugin: dockerfile"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-plugin-api = { workspace = true }
rbuilder-registry = { workspace = true }
rbuilder-plugin-helpers = { workspace = true }
serde_yaml = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = { workspace = true }
