[package]
name = "rbuilder-lang-elixir"
version = "0.1.0"
edition = "2021"
description = "rBuilder language plugin: elixir"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-plugin-api = { workspace = true }
rbuilder-registry = { workspace = true }
rbuilder-lang-runtime = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-elixir = "0.3"
