[package]
name = "rbuilder-lang-erlang"
version = "0.1.0"
edition = "2021"
description = "rBuilder language plugin: erlang"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-plugin-api = { workspace = true }
rbuilder-registry = { workspace = true }
rbuilder-lang-runtime = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-erlang = "0.19"
