[package]
name = "rbuilder-lang-go"
version = "0.4.2"
edition = "2021"
description = "rBuilder language plugin: go"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-plugin-api = { workspace = true }
rbuilder-registry = { workspace = true }
rbuilder-plugin-helpers = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-go = "0.25"
serde_json = "1"
