[package]
name = "rbuilder-lang-java"
version = "0.1.0"
edition = "2021"
description = "rBuilder language plugin: java"
license = "MIT OR Apache-2.0"

[dependencies]
rbuilder-plugin-api = { workspace = true }
rbuilder-registry = { workspace = true }
rbuilder-plugin-helpers = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-java = "0.23"
serde_json = "1"
